src/objects/Individual_Tax__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <formula>IF( 
            CO_Line_Item__c != null,  
            CO_Line_Item__r.Applicable_Tax__r.Name__c,
            IF(
                Service_Order_Line_Item__c != null,
                Service_Order_Line_Item__r.Applicable_Tax__r.Name__c,
                IF(
                    Option_Fee__c != null,
                    Option_Fee__r.Applicable_Tax__r.Name__c,
                    IF(
                        Deal_Unit_Price_Cost__c != null,
                        Deal_Unit_Price_Cost__r.Applicable_Tax__r.Name__c,
                        IF(
                            Deal_Item__c != null,
                            Deal_Item__r.Applicable_Tax__r.Name__c,
                            IF(
                                F_I_Product__c != null,
                                F_I_Product__r.Applicable_Tax_Name__c,
                                null
                        )
                    )
                )
            )
            )
        )</formula>
        <label>Applicable Tax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Item</label>
        <referenceTo>Deal_Item__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Unit_Price_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Unit Price Cost</label>
        <referenceTo>Deal_Unit_Price_Cost__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enhanced_Tax_Amount__c</fullName>
        <label>Enhanced Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_I_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F &amp; I Product</label>
        <referenceTo>F_I_Product__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Label__c</fullName>
        <formula>if($Setup.Configurations__c.Group_Individual_Taxes_On_Sales__c,  (if(ISNULL($Setup.Configurations__c.Group_Individual_Sales_Tax_As__c), &apos;Sales Tax&apos;, $Setup.Configurations__c.Group_Individual_Sales_Tax_As__c)), Sales_Tax_Item__r.Forms_Label__c +(if(AND(Sales_Tax_Item__r.Is_Automated__c,  CONTAINS(Sales_Tax_Item__r.Name__c, &apos;District&apos;)), &apos;-&apos; + Sales_Tax_Item__r.Name__c + &apos;(AUTO-DST-TAX)&apos;, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Tax_items_on_forms__c</fullName>
        <formula>IF( 
	CO_Line_Item__c != null,  
	CO_Line_Item__r.Applicable_Tax__r.Forms_List_Taxes__c,
	IF(
		Service_Order_Line_Item__c != null,
		Service_Order_Line_Item__r.Applicable_Tax__r.Forms_List_Taxes__c,
		IF(
			Option_Fee__c != null,
			Option_Fee__r.Applicable_Tax__r.Forms_List_Taxes__c,
			IF(
				Deal_Unit_Price_Cost__c != null,
				Deal_Unit_Price_Cost__r.Applicable_Tax__r.Forms_List_Taxes__c,
				IF(
					Deal_Item__c != null,
					Deal_Item__r.Applicable_Tax__r.Forms_List_Taxes__c,
                    IF(
						F_I_Product__c != null,
						F_I_Product__r.Applicable_Tax__r.Forms_List_Taxes__c,
						false
				)
			)
		)
	)
    )
)</formula>
        <label>List Tax items on forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option &amp; Fee</label>
        <referenceTo>Option_Fee__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Item_Price__c</fullName>
        <formula>IF( 
	Service_Order_Line_Item__c != null , 
	Service_Order_Line_Item__r.Kit_Price__c, 
	IF( 
		CO_Line_Item__c != null, 
		CO_Line_Item__r.Price__c,
		IF(
			Option_Fee__c != null, 
			Option_Fee__r.Price__c, 
			IF(
				Deal_Unit_Price_Cost__c != null, 
				Deal_Unit_Price_Cost__r.Price__c, 
				IF(
					Deal_Item__c != null, 
					-Deal_Item__r.Agreed_Value__c,
					IF(
						F_I_Product__c != null, 
						F_I_Product__r.Price__c,
						0
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Item_Tax_Amount__c</fullName>
        <formula>ROUND( 
	IF(Service_Order_Line_Item__c != null , 
		IF(Service_Order_Line_Item__r.Tax_Percent__c != 0, (Service_Order_Line_Item__r.Price_When_Tax_Included__c - Service_Order_Line_Item__r.Kit_Price__c) * (Tax_Rate__c/Service_Order_Line_Item__r.Tax_Percent__c), 0), 
		IF(CO_Line_Item__c != null, 
			IF(CO_Line_Item__r.Tax__c != 0, (CO_Line_Item__r.Price_When_Tax_Included__c - CO_Line_Item__r.Price__c) * (Tax_Rate__c / CO_Line_Item__r.Tax__c), 0), 
			IF(Option_Fee__c != null, 
				IF(Option_Fee__r.Sales_Tax_Percentage__c != 0, (Option_Fee__r.Price_When_Tax_Included__c - Option_Fee__r.Price__c) * 
				(Tax_Rate__c / Option_Fee__r.Sales_Tax_Percentage__c), 0), 
				IF(Deal_Unit_Price_Cost__c != null, 
					IF(Deal_Unit_Price_Cost__r.Sales_Tax_Percentage__c != 0, (Deal_Unit_Price_Cost__r.Price_When_Tax_Included__c - Deal_Unit_Price_Cost__r.Price__c) * 
						(Tax_Rate__c / Deal_Unit_Price_Cost__r.Sales_Tax_Percentage__c), 0), 
					IF(Deal_Item__c != null, 
						IF(Deal_Item__r.Default_Unit_Sales_Tax_Percentage__c != 0, -(Deal_Item__r.Tax_Amount__c)* (Tax_Rate__c / Deal_Item__r.Default_Unit_Sales_Tax_Percentage__c), 0), 
						IF(F_I_Product__c != null, 
							IF(F_I_Product__r.Sales_Tax_Percentage__c != 0, (F_I_Product__r.Price_When_Tax_Included__c - F_I_Product__r.Price__c) * 
								(Tax_Rate__c / F_I_Product__r.Sales_Tax_Percentage__c), 0), 
							0 
						) 
					) 
				) 
			) 
		) 
	), 
2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Item Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <formula>IF( 
	Service_Order_Line_Item__c != null, 
	Service_Order_Line_Item__r.Qty_Needed__c,
	IF( 
		CO_Line_Item__c != null, 
		IF(
			CO_Line_Item__r.Part__c != null &amp;&amp; !CO_Line_Item__r.Part__r.Non_Inventory_Part__c &amp;&amp; (CO_Line_Item__r.Qty__c &gt; 0), 
			CO_Line_Item__r.Qty_Committed__c, 
			CO_Line_Item__r.Qty__c 
		), 
		IF(
			Option_Fee__c != null, 
			Option_Fee__r.Qty__c, 
			IF(
				Deal_Unit_Price_Cost__c != null, 
				Deal_Unit_Price_Cost__r.Qty__c, 
				IF(
					Deal_Item__c != null, 
					1,
					IF(
						F_I_Product__c != null, 
						1,
						0
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Item_Name__c</fullName>
        <label>Sales Tax Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Tax Item</label>
        <referenceTo>Sales_Tax_Item__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Payment_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Payment Role</label>
        <referenceTo>SO_Payment_Role__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_To_Invoice__c</fullName>
        <formula>ROUND(Per_Item_Tax_Amount__c, 2) * 
IF( 
	Service_Order_Line_Item__c != null, 
	Service_Order_Line_Item__r.Qty_Needed__c,
	IF( 
		CO_Line_Item__c != null, 
		IF(
			CO_Line_Item__r.Part__c != null &amp;&amp; !CO_Line_Item__r.Part__r.Non_Inventory_Part__c &amp;&amp; (CO_Line_Item__r.Qty__c &gt; 0) &amp;&amp; NOT(ISPICKVAL(CO_Line_Item__r.CO_Header__r.Order_status__c, &apos;Quote&apos;)), 
			CO_Line_Item__r.Qty_Committed__c, 
			CO_Line_Item__r.Qty__c 
		), 
		IF(
			Option_Fee__c != null, 
			Option_Fee__r.Qty__c, 
			IF(
				Deal_Unit_Price_Cost__c != null, 
				Deal_Unit_Price_Cost__r.Qty__c, 
				IF(
					Deal_Item__c != null, 
					1,
					IF(
						F_I_Product__c != null, 
						1,
						0
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount To Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>ROUND(Per_Item_Tax_Amount__c, 2) * 
IF( 
	Service_Order_Line_Item__c != null, 
	Service_Order_Line_Item__r.Qty_Needed__c,
	IF( 
		CO_Line_Item__c != null, 
		CO_Line_Item__r.Qty__c,
		IF(
			Option_Fee__c != null, 
			Option_Fee__r.Qty__c, 
			IF(
				Deal_Unit_Price_Cost__c != null, 
				Deal_Unit_Price_Cost__r.Qty__c, 
				IF(
					Deal_Item__c != null, 
					1,
					IF(
						F_I_Product__c != null, 
						1,
						0
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taxable_Amount_To_Invoice__c</fullName>
        <formula>IF( 
Service_Order_Line_Item__c != null , 
Service_Order_Line_Item__r.Qty_Needed__c * Service_Order_Line_Item__r.Kit_Price__c, 
IF( 
CO_Line_Item__c != null, 
IF(CO_Line_Item__r.Part__c != null &amp;&amp; !CO_Line_Item__r.Part__r.Non_Inventory_Part__c &amp;&amp; (CO_Line_Item__r.Qty__c &gt; 0) &amp;&amp; 
NOT(ISPICKVAL(CO_Line_Item__r.CO_Header__r.Order_status__c, &apos;Quote&apos;)), CO_Line_Item__r.Price__c * CO_Line_Item__r.Qty_Committed__c, CO_Line_Item__r.Price__c * CO_Line_Item__r.Qty__c ), 
IF(
Option_Fee__c != null, 
Option_Fee__r.Price__c * Option_Fee__r.Qty__c, 
IF(
Deal_Unit_Price_Cost__c != null, 
Deal_Unit_Price_Cost__r.Price__c * Deal_Unit_Price_Cost__r.Qty__c, 
IF(
Deal_Item__c != null, 
-Deal_Item__r.Agreed_Value_Taxable_Amount__c,
IF(
F_I_Product__c != null, 
F_I_Product__r.Price__c,
Taxable_Amount_for_Section_Header__c
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxable Amount To Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxable_Amount__c</fullName>
        <formula>IF( 
	Service_Order_Line_Item__c != null , 
	Service_Order_Line_Item__r.Qty_Needed__c * Service_Order_Line_Item__r.Kit_Price__c, 
	IF( 
		CO_Line_Item__c != null, 
		CO_Line_Item__r.Price__c * CO_Line_Item__r.Qty__c, 
		IF(
			Option_Fee__c != null, 
			Option_Fee__r.Price__c * Option_Fee__r.Qty__c, 
			IF(
				Deal_Unit_Price_Cost__c != null, 
				Deal_Unit_Price_Cost__r.Price__c * Deal_Unit_Price_Cost__r.Qty__c, 
				IF(
					Deal_Item__c != null, 
					-Deal_Item__r.Agreed_Value_Taxable_Amount__c,
                    IF(
					    F_I_Product__c != null, 
					    F_I_Product__r.Price__c, 
						Taxable_Amount_for_Section_Header__c
                    )
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxable_Amount_for_Section_Header__c</fullName>
        <label>Taxable Amount for Section Header</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Price Cost</label>
        <referenceTo>Unit_Price_Cost__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoicing_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoicing Header</label>
        <referenceTo>Vendor_Invoicing_Header__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Individual Tax</label>
    <nameField>
        <displayFormat>ITN-{00000000}</displayFormat>
        <label>Individual Tax Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>